--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.wsf.firstcodelearn">
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,15 +12,34 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <receiver
+            android:name=".broadcast.MyStaticReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
+        <receiver android:name=".broadcast.MyReceiver">
+            <!--            priority 优先级，优先级高的先收到广播-->
+            <intent-filter android:priority="100">
+                <action android:name="com.wsf.learn.MY_BROADCAST" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name=".broadcast.MyNewBroadReceiver">
+            <intent-filter>
+                <action android:name="com.wsf.learn.MY_BROADCAST" />
+            </intent-filter>
+        </receiver>
+
         <activity
             android:name=".DialogActivity"
             android:theme="@style/Theme.AppCompat.DayNight.Dialog" />
-        <activity android:name=".SecondActivity"></activity>
+        <activity android:name=".SecondActivity" />
         <activity
             android:name=".MainActivity"
-            android:label="this is first activity">
-
-        </activity>
+            android:label="this is first activity"></activity>
         <activity
             android:name=".ThirdActivity"
             android:label="thirdActivity">
@@ -30,10 +51,9 @@
         </activity>
         <activity
             android:name=".recyclerview.RecyclerViewActivity"
-            android:label="my recyclerView">
-
-        </activity>
-        <activity android:name=".fragment.FragmentActivity">
+            android:label="my recyclerView"></activity>
+        <activity android:name=".fragment.FragmentActivity"></activity>
+        <activity android:name=".broadcast.BroadMain">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
