--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
         android:allowBackup="true"
@@ -64,6 +65,8 @@
 
         </activity>
         <activity android:name=".permission.PermissionActivity" >
+        </activity>
+        <activity android:name=".contact.ContactActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
