--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,9 @@
         </activity>
         <activity android:name=".notification.CameraActivity"
             android:enabled="true">
+
+        </activity>
+        <activity android:name=".notification.PlayAudioActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
