--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,6 +86,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".service.ServiceActivity" />
+        <activity android:name=".myjetpack.JetPackMainActivity" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
