1.自定义tablelayout 2.base64编码转bitmap设置成imageview宽度适应

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,6 +91,8 @@
 
         </activity>
         <activity android:name="com.wsf.customview.ViewTestActivity" />
+        <activity android:name=".webviewtest.MyWebViewActivity" />
+        <activity android:name=".webviewtest.ProductDetailActivity" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
