--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
@@ -41,6 +42,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
     implementation "androidx.room:room-runtime:2.2.5"
     implementation'com.wsf.permissionw:permissionw:1.0.0'
+    implementation 'com.alibaba:fastjson:1.2.62'
     kapt "androidx.room:room-compiler:2.2.5"
 }
 repositories {
