1.自定义View波纹扩散SpreadView

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,6 +93,7 @@
         <activity android:name="com.wsf.customview.ViewTestActivity" />
         <activity android:name=".webviewtest.MyWebViewActivity" />
         <activity android:name=".webviewtest.ProductDetailActivity" />
+        <activity android:name=".SpreadActivity" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
