--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,6 +94,7 @@
         <activity android:name=".webviewtest.MyWebViewActivity" />
         <activity android:name=".webviewtest.ProductDetailActivity" />
         <activity android:name=".SpreadActivity" />
+        <activity android:name=".htmltext.HtmlActivity" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
